--- a/assets/index.html
+++ b/assets/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-    <title>IP Address</title>
+    <title>快点IP查询</title>
 </head>
 <script src="/main.js"></script>
 <link rel="stylesheet" href="/main.css"  />
@@ -14,10 +14,10 @@
     <header class="mdui-appbar mdui-shadow-0 mdui-appbar-fixed">
         <div class="mdui-toolbar mdui-color-blue-a400" style="height: 8vh!important;">
             <div class="mdui-hidden-sm-down toolbar-spacer"></div>
-            <a href="https://ip.hlz.ink"> <span class="mdui-typo-title title">IP.HLZ.INK</span> </a>
+            <a href="https://ip.quickso.cn"> <span class="mdui-typo-title title">快点IP查询</span> </a>
             <div class="mdui-toolbar-spacer"></div>
             <button class="mdui-btn mdui-btn-icon" onclick="switchSearchBox()"> <i class="mdui-icon material-icons">search</i> </button>
-            <a href="https://github.com/ohh-haolin/ipaddress-cfworker" target="_blank" class="mdui-btn mdui-btn-icon"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36 36" enable-background="new 0 0 36 36" xml:space="preserve" class="mdui-icon" style="width: 24px;height:24px;">
+            <a href="https://github.com/muzihuaner/ipaddress-cfworker" target="_blank" class="mdui-btn mdui-btn-icon"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36 36" enable-background="new 0 0 36 36" xml:space="preserve" class="mdui-icon" style="width: 24px;height:24px;">
             <path fill-rule="evenodd" clip-rule="evenodd" fill="#ffffff" d="M18,1.4C9,1.4,1.7,8.7,1.7,17.7c0,7.2,4.7,13.3,11.1,15.5 c0.8,0.1,1.1-0.4,1.1-0.8c0-0.4,0-1.4,0-2.8c-4.5,1-5.5-2.2-5.5-2.2c-0.7-1.9-1.8-2.4-1.8-2.4c-1.5-1,0.1-1,0.1-1 c1.6,0.1,2.5,1.7,2.5,1.7c1.5,2.5,3.8,1.8,4.7,1.4c0.1-1.1,0.6-1.8,1-2.2c-3.6-0.4-7.4-1.8-7.4-8.1c0-1.8,0.6-3.2,1.7-4.4 c-0.2-0.4-0.7-2.1,0.2-4.3c0,0,1.4-0.4,4.5,1.7c1.3-0.4,2.7-0.5,4.1-0.5c1.4,0,2.8,0.2,4.1,0.5c3.1-2.1,4.5-1.7,4.5-1.7 c0.9,2.2,0.3,3.9,0.2,4.3c1,1.1,1.7,2.6,1.7,4.4c0,6.3-3.8,7.6-7.4,8c0.6,0.5,1.1,1.5,1.1,3c0,2.2,0,3.9,0,4.5 c0,0.4,0.3,0.9,1.1,0.8c6.5-2.2,11.1-8.3,11.1-15.5C34.3,8.7,27,1.4,18,1.4z"></path></a>
             <div class="mdui-hidden-sm-down toolbar-spacer"></div>
         </div>
@@ -38,38 +38,38 @@
             <div class="mdui-valign" style="height: 100%;">
                 <div class="mdui-card card card-top-margin">
                     <div class="mdui-card-primary">
-                        <div class="mdui-card-primary-title table-margin">IP Address</div>
+                        <div class="mdui-card-primary-title table-margin">IP地址</div>
                     </div>
                     <div class="mdui-card-content table-margin">
                         <div class="mdui-table-fluid no-border">
                             <table class="mdui-table table-margin">
                                 <tbody class="my-table">
                                     <tr>
-                                        <th width="38%">IP address</th>
-                                        <td id="ip"><i class="rotating mdui-icon material-icons">refresh</i><span>Querying</span></td>
+                                        <th width="38%">IP地址</th>
+                                        <td id="ip"><i class="rotating mdui-icon material-icons">刷新</i><span>正在查询</span></td>
                                     </tr>
                                     <tr>
-                                        <th>City</th>
+                                        <th>城市</th>
                                         <td id="city"></td>
                                     </tr>
                                     <tr>
-                                        <th>Region</th>
+                                        <th>地区</th>
                                         <td id="region"></td>
                                     </tr>
                                     <tr>
-                                        <th>Country</th>
+                                        <th>国家</th>
                                         <td id="country"></td>
                                     </tr>
                                     <tr>
-                                        <th>Position</th>
+                                        <th>位置</th>
                                         <td id="position"></td>
                                     </tr>
                                     <tr>
-                                        <th>ASN Org</th>
+                                        <th>运营商</th>
                                         <td id="asn"></td>
                                     </tr>
                                     <tr>
-                                        <th>Time Zone</th>
+                                        <th>时区</th>
                                         <td id="timezone"></td>
                                     </tr>
                                 </tbody>
@@ -82,7 +82,7 @@
     </div>
 
     <div class="footer">
-        <span>©2022 <a href="https://hlz.ink" target="_blank">Haolin Zhang</a></span>
+        <span>©2022 <a href="https://huangetech.github.io" target="_blank">欢哥科技</a></span>
     </div>
 
 </body>
