--- a/assets/index.html
+++ b/assets/index.html
@@ -25,8 +25,8 @@
             <div class="search-space-left"></div>
             <div class="search-box mdui-shadow-10">
                 <div class="mdui-textfield">
-                    <input class="mdui-textfield-input" type="text" id="queryInput" autocomplete="off" onkeydown="enter_submit(event);" placeholder="IP Address" />
-                    <button class="mdui-btn mdui-color-pink-accent mdui-ripple" id="queryButton" onclick="searchHandler()">Search</button>
+                    <input class="mdui-textfield-input" type="text" id="queryInput" autocomplete="off" onkeydown="enter_submit(event);" placeholder="IP地址" />
+                    <button class="mdui-btn mdui-color-pink-accent mdui-ripple" id="queryButton" onclick="searchHandler()">搜索</button>
                 </div>
             </div>
             <div class="mdui-hidden-sm-down search-space-right"></div>
